--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 :root {
-  --font-size: 14px;
-  --line-height: 1.6;
+  --font-size: 15px;
+  --font-weight: 320;
+  --line-height: 1.5;
   --background: #fff;
   --grey1: #111;
   --grey2: #555;
@@ -8,6 +9,7 @@
   --wash1: #e5e5e5;
   --wash2: #f2f2f2;
   --transparentBorder: rgba(0, 0, 0, 0.05);
+  --font-family: "Diatype", Inter, sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,10 +18,17 @@
     --grey1: #eee;
     --grey2: #bbb;
     --grey3: #888;
-    --wash1: #4E4E4E;
+    --wash1: #4e4e4e;
     --wash2: #383838;
     --transparentBorder: rgb(255 255 255 / 0.1);
   }
+}
+
+@font-face {
+  font-family: "Diatype";
+  font-weight: 100 700;
+  font-display: fallback;
+  src: url(/font/ABCDiatypeVariable.woff2) format("woff2");
 }
 
 * {
@@ -36,8 +45,9 @@ body {
 
 body {
   background-color: var(--background);
-  font-family: var(--font-inter), sans-serif;
+  font-family: var(--font-family), sans-serif;
   font-size: var(--font-size);
+  font-weight: var(--font-weight);
   line-height: var(--line-height);
   color: var(--grey1);
   -webkit-font-smoothing: antialiased;
